--- a/GivingDayEmail.html
+++ b/GivingDayEmail.html
@@ -79,7 +79,7 @@
                         max-width:0px;
                         opacity:0;
                         overflow:hidden;">
-                        Be a hero-change a student's life
+                        Be a Hero-Change a Student's Life
                     </td>  
                 </tr>
                 <tr> <!-- Header-->
@@ -128,6 +128,7 @@
                             </tr>
                         </table>
                     </td>
+                    <!-- 'Be a Hero' banner -->
                     <td>
                         <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:580px; border-collapse: collapse">
                             <tr width="100%" class="banner" align="left" style="padding-top: 12px; padding-bottom: 12px; background: #8C1D40;  box-shadow: 4px 4px 8px 0 rgba(0,0,0,0.2), 4px 4px 20px 0 rgba(0,0,0,0.19)">
@@ -143,6 +144,7 @@
                         </table>
                     </td>
                 </tr>
+                <!-- Donation amount section -->
                 <tr class="donation-section">
                     <td style="padding: 30px 15px 30px 15px">
                         <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 580px; border-collapse: collapse">
