Updated intro background

--- a/GivingDayEmail.html
+++ b/GivingDayEmail.html
@@ -61,7 +61,7 @@
          background: #8C1D40;
      }
      .intro {
-         background: #f1f0f0;
+         background: rgb(255, 243, 210);
      }
 </style>
 <![endif] →
@@ -113,7 +113,8 @@
                         <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:520px; border-collapse: collapse">
                             <tr align="center" style="padding-bottom: 15px;">
                                 <div>
-                                    <td class="intro" style="background: linear-gradient(180deg, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.05) 100%); border-radius: 0px; padding-left: 30px; padding-right: 30px;">
+                                        <td class="intro" style="background: linear-gradient(180deg, rgba(255,198,39,.1) 0%, rgba(255,198,39,.4) 100%); border-radius: 0px; padding-left: 30px; padding-right: 30px;">
+                                    <!-- <td class="intro" style="background: linear-gradient(180deg, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.05) 100%); border-radius: 0px; padding-left: 30px; padding-right: 30px;"> -->
                                         <p style="font-size: 16px; font-weight: 600; line-height: 24px; font-family: 'Roboto', sans-serif, Arial">
                                                 Every year, thousands of loyal Sun Devils – alumni, parents, faculty, staff, students and fans – come together to accelerate the process of changing lives and the future as part of Arizona State University’s <a href="https://clas.asu.edu/giving-day">Sun Devil Giving Day</a>, a 24-hour fundraising event.
                                         </p>
