Updated intro background, fonts

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
          background: #8C1D40;
      }
      .intro {
-         background: #f1f0f0;
+         background: rgb(255, 243, 210);
      }
 </style>
-<![endif] →
+<![endif] → 
 <body>
     <div class="wrapper" offset="0" style="font-family: 'Roboto', sans-serif, Verdana, Tahoma, Arial; padding:0; margin:0; display:block; -webkit-text-size-adjust:none">
             <table class="outer-table" align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:580px; border-collapse: collapse">
@@ -79,7 +79,7 @@
                         max-width:0px;
                         opacity:0;
                         overflow:hidden;">
-                        Be a hero-change a student's life
+                        Be a Hero-Change a Student's Life
                     </td>  
                 </tr>
                 <tr> <!-- Header-->
@@ -113,7 +113,8 @@
                         <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:520px; border-collapse: collapse">
                             <tr align="center" style="padding-bottom: 15px;">
                                 <div>
-                                    <td class="intro" style="background: linear-gradient(180deg, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.05) 100%); border-radius: 0px; padding-left: 30px; padding-right: 30px;">
+                                        <td class="intro" style="background: linear-gradient(180deg, rgba(255,198,39,.1) 0%, rgba(255,198,39,.4) 100%); border-radius: 0px; padding-left: 30px; padding-right: 30px;">
+                                    <!-- <td class="intro" style="background: linear-gradient(180deg, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.05) 100%); border-radius: 0px; padding-left: 30px; padding-right: 30px;"> -->
                                         <p style="font-size: 16px; font-weight: 600; line-height: 24px; font-family: 'Roboto', sans-serif, Arial">
                                                 Every year, thousands of loyal Sun Devils – alumni, parents, faculty, staff, students and fans – come together to accelerate the process of changing lives and the future as part of Arizona State University’s <a href="https://clas.asu.edu/giving-day">Sun Devil Giving Day</a>, a 24-hour fundraising event.
                                         </p>
@@ -128,6 +129,7 @@
                             </tr>
                         </table>
                     </td>
+                    <!-- 'Be a Hero' banner -->
                     <td>
                         <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:580px; border-collapse: collapse">
                             <tr width="100%" class="banner" align="left" style="padding-top: 12px; padding-bottom: 12px; background: #8C1D40;  box-shadow: 4px 4px 8px 0 rgba(0,0,0,0.2), 4px 4px 20px 0 rgba(0,0,0,0.19)">
@@ -143,6 +145,7 @@
                         </table>
                     </td>
                 </tr>
+                <!-- Donation amount section -->
                 <tr class="donation-section">
                     <td style="padding: 30px 15px 30px 15px">
                         <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 580px; border-collapse: collapse">
@@ -284,7 +287,7 @@
                         <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 580px; border-collapse: collapse">
                             <tr align="center">
                                 <td>
-                                    <h3 class="appreciated" style="font-size: 28px; font-weight: bold; line-height: 36px; color: #333333; margin: 0; letter-spacing: -1px">
+                                    <h3 class="appreciated" style="font-size: 24px; font-weight: bold; line-height: 36px; color: #333333; margin: 0; letter-spacing: -1px">
                                     All donations are greatly appreciated.
                                     </h3>
                                 </td>
