--- a/GivingDayEmail.html
+++ b/GivingDayEmail.html
@@ -49,8 +49,9 @@
     .button-gold:hover {
         background: #FFD767 !important;
     }
+    /* Cropping copyright, for demonstration purposes only */
     .counter {
-        clip-path: inset(0px 0px 10% 0px);
+        clip-path: inset(0px 0px 10% 0px); 
     }
 </style>
 
